--- a/webpage.html
+++ b/webpage.html
@@ -16,9 +16,9 @@
     <!-- headerの<div>要素 -->
     <div class="header">
       <ul>
-       <li></li>     
-       <li></li>
-       <li></li>
+       <li>本サイトの目的</li>     
+       <li>競馬の魅力</li>
+       <li>作者プロフィール</li>
       </ul>
     </div>
     
