--- a/webpage.html
+++ b/webpage.html
@@ -15,6 +15,8 @@
   <body>
     <!-- headerの<div>要素 -->
     <div class="header">
+    <div class="header-logo">Life Is but a Dream</div>
+    <div class="header-list">
       <ul>
        <li>本サイトの目的</li>     
        <li>競馬の魅力</li>
