--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="header-list">
       <ul>
        <li>本サイトの目的</li>     
-       <li>競馬の魅力</li>
+       <li>馬の魅力</li>
        <li>作者プロフィール</li>
       </ul>
     </div>
