--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 
     <div class="main">
       
-     <div class="contents-item1">
+     <!-- <div class="contents-item1"> -->
       <img src="https://github.com/matin-aya/yy8tm2a2/blob/main/images/coming_soon_1.png">
       <!-- <p>Top picture</p> -->
-     </div>  
+     <!-- </div> --> 
       
     </div>
 
