--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
       
      <!-- <div class="contents-item1"> -->
       <!-- <img src="https://github.com/matin-aya/yy8tm2a2/blob/main/images/coming_soon_1.png"> -->
-      background-image: url(“https://github.com/matin-aya/yy8tm2a2/blob/main/images/coming_soon_1.png?raw=true“);
+      <!-- background-image: url(“https://github.com/matin-aya/yy8tm2a2/blob/main/images/coming_soon_1.png?raw=true“); -->
+      <img src="https://github.com/matin-aya/yy8tm2a2/blob/main/images/coming_soon_1.png?raw=true">
       <!-- <p>Top picture</p> -->
      <!-- </div> --> 
       
