--- a/index_ori.html
+++ b/index_ori.html
@@ -43,7 +43,7 @@
         
        <div class="contents-item3">
          <img src=”https://github.com/yyamatani/yy8tm2a2/blob/main/images/coming_soon_3.png?raw=true”>
-         <p>Dialy</p>
+         <p>Diary</p>
        </div>
 
        <div class="contents-item4">
