--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
     </div>
 
     <div class="main">
-      
+    <div class="contents-item1">
       <img src="https://github.com/matin-aya/yy8tm2a2/blob/main/images/coming_soon_1.png?raw=true">
       <!-- <p>Top picture</p> -->
+    </div>
+      
       <img src="https://github.com/matin-aya/yy8tm2a2/blob/main/images/coming_soon_2.png?raw=true">
       <!-- <p>今週の一枚</p> -->
       <img src="https://github.com/matin-aya/yy8tm2a2/blob/main/images/coming_soon_3.png?raw=true">
