--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     </div>
 
 <div class="main">
+  
+  <div class="content">              
         <div class="image">
             <p>画像</p>
         </div>
@@ -30,7 +32,9 @@
         <div class="image">
             <p>画像</p>
         </div>
-    </div>
+  </div>
+  
+</div>
 
     <div class="footer">
       
