--- a/index.html
+++ b/index.html
@@ -19,20 +19,10 @@
 
 <div class="main">
   
-  <div class="content">              
-        <div class="image">
-            <p>画像</p>
-        </div>
-        <div class="image">
-            <p>画像</p>
-        </div>
-        <div class="image">
-            <p>画像</p>
-        </div>
-        <div class="image">
-            <p>画像</p>
-        </div>
-  </div>
+<div class="content">
+  <div class="flex-item item1">Top picture</div>
+  <div class="flex-item item2">今週の一枚</div>
+</div>
   
 </div>
 
