--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 <div class="content">
   <div class="flex-item item1">Top picture</div>
   <div class="flex-item item2">今週の一枚</div>
-  <div class="flex-item item3">今週の注目レース</div>
-  <div class="flex-item item4">Diary</div>
+  <div class="flex-item_b item3">Diary</div>
+  <div class="flex-item_b item4">今週の注目レース</div>
 </div>
   
 </div>
