--- a/index.html
+++ b/index.html
@@ -23,22 +23,19 @@
   
 <div class="wrap">
   <div class="item">
-    <h2>Flexboxで実装できるレイアウト</h2>
+    <p>Top picture</p>
   </div>
 
   <div class="item">
-    <img src="pic05.jpg">
-    <h2>Flexboxで実装できるレイアウト</h2>
+    <p>今週の一枚</p>
   </div>
 
   <div class="item">
-    <img src="pic06.jpg">
-    <h2>Flexboxで実装できるレイアウト</h2>
+    <p>今週の注目レース</p>
   </div>
 
   <div class="item">
-    <img src="pic07.jpg">
-    <h2>Flexboxで実装できるレイアウト</h2>
+    <p>Diary</p>
   </div>
 
 </div>
