--- a/index.html
+++ b/index.html
@@ -20,26 +20,22 @@
 <div class="main">
 
 <!-- ################################ -->
-  
-<div class="wrap">
-  <div class="item">
-    <p>Top picture</p>
-  </div>
+ 
+ <div class="content">
+        <div class="image">
+            <p>Top picture</p>
+        </div>
+        <div class="image">
+            <p>今週の一枚</p>
+        </div>
+        <div class="image">
+            <p>今週の注目レース</p>
+        </div>
+        <div class="image">
+            <p>Diary</p>
+        </div>
+    </div>
 
-  <div class="item">
-    <p>今週の一枚</p>
-  </div>
-
-  <div class="item">
-    <p>今週の注目レース</p>
-  </div>
-
-  <div class="item">
-    <p>Diary</p>
-  </div>
-
-</div>
-  
 <!-- ################################ -->
   
 </div>
