--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
 <!-- ################################ -->
  
  <div class="content">
-        <div class="image">
+        <div class="image_1">
             <p>Top picture</p>
         </div>
-        <div class="image">
+        <div class="image_2">
             <p>今週の一枚</p>
         </div>
-        <div class="image">
+        <div class="image_3">
             <p>Diary</p>
         </div>
-        <div class="image">
+        <div class="image_4">
             <p>今週の注目レース</p>
         </div>
     </div>
