--- a/index.html
+++ b/index.html
@@ -20,22 +20,10 @@
 <div class="main">
 
 <!-- ################################ -->
- 
- <div class="content">
-        <div class="image_1">
-            <p>Top picture</p>
-        </div>
-        <div class="image_2">
-            <p>今週の一枚</p>
-        </div>
-        <div class="image_3">
-            <p>Diary</p>
-        </div>
-        <div class="image_4">
-            <p>今週の注目レース</p>
-        </div>
-    </div>
-
+        <div class="image_1">Top picture</div>
+        <div class="image_2">今週の一枚</div>
+        <div class="image_3">Diary</div>
+        <div class="image_4">今週の注目レース</div>
 <!-- ################################ -->
   
 </div>
