--- a/index.html
+++ b/index.html
@@ -18,14 +18,12 @@
     </div>
 
 <div class="main">
-
 <!-- ################################ -->
-        <div class="image_1">Top picture</div>
-        <div class="image_2">今週の一枚</div>
-        <div class="image_3">Diary</div>
-        <div class="image_4">今週の注目レース</div>
+        <div class="image">Top picture</div>
+        <div class="image">今週の一枚</div>
+        <div class="image">Diary</div>
+        <div class="image">今週の注目レース</div>
 <!-- ################################ -->
-  
 </div>
 
     <div class="footer">
