--- a/index.html
+++ b/index.html
@@ -19,10 +19,18 @@
 
 <div class="main">
 <!-- ################################ -->
-        <div class="image">Top picture</div>
-        <div class="image">今週の一枚</div>
-        <div class="image">Diary</div>
-        <div class="image">今週の注目レース</div>
+    <div class="image">
+        Top picture
+    </div>
+    <div class="image">
+        今週の一枚
+    </div>
+    <div class="image">
+        Diary
+    </div>
+    <div class="image">
+        今週の注目レース
+    </div>
 <!-- ################################ -->
 </div>
 
