--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
 
 <div class="main">
 <!-- ################################ -->
-    <div class="image">
+    <div class="image_1">
         Top picture
     </div>
-    <div class="image">
+    <div class="image_2">
         今週の一枚
     </div>
-    <div class="image">
+    <div class="image_3">
         Diary
     </div>
-    <div class="image">
+    <div class="image_4">
         今週の注目レース
     </div>
 <!-- ################################ -->
