--- a/index.html
+++ b/index.html
@@ -19,17 +19,11 @@
 
 <div class="main">
 <!-- ################################ -->
-    <div class="image">
-        Top picture
+    <div class="content">
+        <p>Top picture</p>
     </div>
-    <div class="image">
-        今週の一枚
-    </div>
-    <div class="image">
-        Diary
-    </div>
-    <div class="image">
-        今週の注目レース
+    <div class="local_menu">
+       <p>今週の一枚&Diary&今週の注目レース</p>
     </div>
 <!-- ################################ -->
 </div>
