--- a/index.html
+++ b/index.html
@@ -17,19 +17,20 @@
       </div>
     </div>
 
-<div class="main">
+<main>
 <!-- ################################ -->
     <div class="content">
         <p>Top picture</p>
     </div>
+  
     <div class="local_menu">
        <p>今週の一枚&Diary&今週の注目レース</p>
     </div>
 <!-- ################################ -->
-</div>
+</main>
 
-    <div class="footer">
+    <footer class="footer">
       
-    </div>
+    </footer>
   </body>
 </html>
