--- a/index.html
+++ b/index.html
@@ -1,36 +1,27 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Life Is but a Dream</title>
-    <link rel="stylesheet" href="stylesheet.css">
-  </head>
-  <body>
-    <div class="header">
-      <div class="header-logo">Life Is but a Dream</div>
-      <div class="header-list">
-        <ul>
-          <li>作者紹介</li>
-          <li>競走馬の魅力</li>
-          <li>本サイトの目的</li>
-        </ul>
-      </div>
-    </div>
+<head>
+   <meta charset="utf-8"/>
+   <title>マルチカラム</title>
+    <link rel="stylesheet" href="css/multiColumn.css">
+</head>
 
-<main>
-<!-- ################################ -->
-    <div class="content">
-        <p>Top picture</p>
+<body>
+    <header class="header">
+       <p>ヘッダー</p>
+    </header>
+    <div class="glovalNavigation">
+       <p>グローバルナビゲーション</p>
     </div>
-  
-    <div class="local_menu">
-       <p>今週の一枚&Diary&今週の注目レース</p>
-    </div>
-<!-- ################################ -->
-</main>
-
+    <main>
+        <div class="content">
+            <p>コンテンツ</p>
+        </div>
+        <div class="localNavigation">
+            <p>ローカルナビゲーション</p>
+        </div>
+    </main>
     <footer class="footer">
-      
+        <p>フッター</p>
     </footer>
-  </body>
-</html>
+</body>
