--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
    <meta charset="utf-8"/>
    <title>マルチカラム</title>
-    <link rel="stylesheet" href="css/multiColumn.css">
+    <link rel="stylesheet" href="css/stylesheet.css">
 </head>
 
 <body>
