--- a/index.html
+++ b/index.html
@@ -2,23 +2,23 @@
 <html>
 <head>
    <meta charset="utf-8"/>
-   <title>マルチカラム</title>
+   <title>Life Is but a Dream</title>
     <link rel="stylesheet" href="stylesheet.css">
 </head>
 
 <body>
     <header class="header">
-       <p>ヘッダー</p>
+       <p>Life Is but a Dream</p>
     </header>
     <div class="glovalNavigation">
        <p>グローバルナビゲーション</p>
     </div>
     <main>
         <div class="content">
-            <p>コンテンツ</p>
+            <p>Top picture</p>
         </div>
         <div class="localNavigation">
-            <p>ローカルナビゲーション</p>
+            <p>今週絵&日記&News</p>
         </div>
     </main>
     <footer class="footer">
