--- a/index.html
+++ b/index.html
@@ -3,22 +3,24 @@
 <head>
    <meta charset="utf-8"/>
    <title>Life Is but a Dream</title>
-    <link rel="stylesheet" href="stylesheet.css">
+   <
 </head>
 
 <body>
     <header class="header">
-       <p>Life Is but a Dream</p>
+       <p>ヘッダー</p>
     </header>
-    <div class="glovalNavigation">
-       <p>グローバルナビゲーション</p>
-    </div>
     <main>
-        <div class="content">
+        <div class="localNavigation">
             <p>Top picture</p>
         </div>
-        <div class="localNavigation">
-            <p>今週絵&日記&News</p>
+        <div class="content-area">
+            <div class="content">
+                <p>コンテンツ</p>
+            </div>
+            <div class="content">
+                <p>コンテンツ</p>
+            </div>
         </div>
     </main>
     <footer class="footer">
