--- a/index.html
+++ b/index.html
@@ -16,10 +16,13 @@
         </div>
         <div class="content-area">
             <div class="content">
-                <p>コンテンツ</p>
+                <p>今週の一枚</p>
             </div>
             <div class="content">
-                <p>コンテンツ</p>
+                <p>今週の注目レース</p>
+            </div>
+            <div class="content">
+                <p>Diary</p>
             </div>
         </div>
     </main>
