--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
    <title>Life Is but a Dream</title>
    <link rel="stylesheet" href="stylesheet.css">
 </head>
-
+   
 <body>
     <header class="header">
        <p>ヘッダー</p>
     </header>
+   
+    <div class="glovalNavigation">
+       <p>グローバルナビゲーション</p>
+    </div>   
+   
     <main>
         <div class="localNavigation">
             <p>Top picture</p>
