--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!doctype html>
+<div class="wrapper">
 <html>
 <head>
    <meta charset="utf-8"/>
@@ -35,3 +36,4 @@
         <p>フッター</p>
     </footer>
 </body>
+</div>
