--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   </head>
   <body>
     <div class="header">
-      <div class="header-logo">Life Is but a Dream</div>
+             <p>Life Is but a Dream</p>
+    </header>
       <div class="glovalNavigation">
         <ul>
           <li>作者紹介</li>
