--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     <link rel="stylesheet" href="stylesheet.css">
   </head>
   <body>
-    <div class="header">
-             <p>Life Is but a Dream</p>
-    </header>
+    <div class="header">Life Is but a Dream</div>
+
       <div class="glovalNavigation">
         <ul>
           <li>作者紹介</li>
