--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <link rel="stylesheet" href="stylesheet.css">
   </head>
   <body>
-    <div class="header">Life Is but a Dream</div>
+    <div class="header">
+      <div class="header-logo">Life Is but a Dream</div>
+      </header>
 
       <div class="glovalNavigation">
         <ul>
