--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
+<!doctype html>
+<html>
+<head>
+    <meta charset="utf-8"/>
+    <title>Life Is but a Dream</title>
+    <link rel="stylesheet" href="stylesheet.css">
+</head>
 
-
-<link rel="stylesheet" href="stylesheet.css">
 <div class="container">
-  <header>Header</header>
-  <main>Main</main>
-  <aside>Aside</aside>
+  <header>Life Is but a Dream</header>
+  <main>Top picture</main>
+  <aside>今週の一枚 & Diary & 今週の注目レース</aside>
   <footer>Footer</footer>
 </div>
+  
+</html>
