--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 
 <div class="container">
-  <header>Life Is but a Dream</header>
-  <main>Top picture</main>
-  <aside>今週の一枚 & Diary & 今週の注目レース</aside>
+  <header>Header</header>
+  <main>Main</main>
+  <aside>Aside</aside>
   <footer>Footer</footer>
 </div>
   
