--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <div class="container">
   <header>Header</header>
   <main>Main</main>
-  <aside>Aside</aside>
+  <div class="aside">Aside</div>
   <footer>Footer</footer>
 </div>
   
