--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
 
 <div class="container">
   <header>Header</header>
+ 
+<div class="body">
   <main>Main</main>
   <div class="aside">Aside</div>
-  <footer>Footer</footer>
+</div> 
+    
+    <footer>Footer</footer>
 </div>
   
 </html>
