--- a/index.html
+++ b/index.html
@@ -1,20 +1,27 @@
 <!doctype html>
 <html>
 <head>
-    <meta charset="utf-8"/>
-    <title>Life Is but a Dream</title>
+   <meta charset="utf-8"/>
+   <title>マルチカラム</title>
     <link rel="stylesheet" href="stylesheet.css">
 </head>
 
-<div class="container">
-  <header>Header</header>
- 
-<div class="body">
-  <main>Main</main>
-  <div class="aside">Aside</div>
-</div> 
-    
-    <footer>Footer</footer>
-</div>
-  
-</html>
+<body>
+    <header class="header">
+       <p>ヘッダー</p>
+    </header>
+    <div class="glovalNavigation">
+       <p>グローバルナビゲーション</p>
+    </div>
+    <main>
+        <div class="content">
+            <p>コンテンツ</p>
+        </div>
+        <div class="localNavigation">
+            <p>ローカルナビゲーション</p>
+        </div>
+    </main>
+    <footer class="footer">
+        <p>フッター</p>
+    </footer>
+</body>
