--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
    <meta charset="utf-8"/>
-   <title>マルチカラム</title>
+   <title>Life Is but a Dream</title>
     <link rel="stylesheet" href="stylesheet.css">
 </head>
 
