--- a/index.html
+++ b/index.html
@@ -10,9 +10,17 @@
     <header class="header">
        <p>Life Is but a Dream</p>
     </header>
+  
     <div class="glovalNavigation">
-       <p>グローバルナビゲーション</p>
+      <div class="header-list">
+        <ul>
+          <li>作者紹介</li>
+          <li>競走馬の魅力</li>
+          <li>本サイトの目的</li>
+        </ul>
+      </div>   
     </div>
+   
     <main>
         <div class="content">
             <p>Top picture</p>
