--- a/index.html
+++ b/index.html
@@ -8,18 +8,16 @@
 
 <body>
     <header class="header">
-       <p>Life Is but a Dream</p>
+       <div class="header-logo">Life Is but a Dream</div>
     </header>
   
     <div class="glovalNavigation">
-      <div class="header-list">
         <ul>
           <li>作者紹介</li>
           <li>競走馬の魅力</li>
           <li>本サイトの目的</li>
         </ul>
       </div>   
-    </div>
    
     <main>
         <div class="content">
