--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </header>
   
     <div class="glovalNavigation">
-        <ul>
+        <ul class="header-list">
           <li>作者紹介</li>
           <li>競走馬の魅力</li>
           <li>本サイトの目的</li>
