--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
     <header class="header">
-      <p>Life Is but a Dream</p>
+      <div class="header-logo">Life Is but a Dream</div>
     </header>
   
     <div class="glovalNavigation">
