--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
         </div>
        
         <div class="localNavigation">
-         　<div class="item1">今週の一枚</div>
-           <div class="item2">Diary</div>
-           <div class="item3">今週の注目レース</div>
+         　<div class="item item1">今週の一枚</div>
+           <div class="item item2">Diary</div>
+           <div class="item item3">今週の注目レース</div>
         </div>    
        
     </main>
