--- a/index.html
+++ b/index.html
@@ -20,16 +20,14 @@
       </div>   
    
     <main>
+<!-- ############################################# -->
         <div class="content">
-            <p>Top picture</p>
-        </div>
-       
-        <div class="localNavigation">
-         　<div class="item1">今週の一枚</div>
-           <div class="item2">Diary</div>
-           <div class="item3">今週の注目レース</div>
+            <div calss=item_1>Top picture</div>
+         　<div class="item_2">今週の一枚</div>
+           <div class="item_3">Diary</div>
+           <div class="item_4">今週の注目レース</div>
         </div>    
-       
+<!-- ############################################# -->
     </main>
     <footer class="footer">
     </footer>
