--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@
    
     <main>
 <!-- ############################################# -->
+       <div class="contents">
             <div calss=item_1>Top picture</div>
          　<div class="item_2">今週の一枚</div>
            <div class="item_3">Diary</div>
-           <div class="item_4">今週の注目レース</div>   
+           <div class="item_4">今週の注目レース</div>
+       </div>
 <!-- ############################################# -->
     </main>
     <footer class="footer">
