--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
    
     <main>
 <!-- ############################################# -->
-       <div class="contents">
-           <div calss="item_1">Top picture</div>
-         　<div class="item_2">今週の一枚</div>
-           <div class="item_3">Diary</div>
-           <div class="item_4">今週の注目レース</div>
-       </div>
+       <div id="container">
+     <div id="itemA">Top picture</div>
+     <div id="itemB">今週の一枚</div>
+     <div id="itemC">Diary</div>
+     <div id="itemD">今週の注目レース</div>
+      </div>
 <!-- ############################################# -->
     </main>
     <footer class="footer">
