--- a/index.html
+++ b/index.html
@@ -15,20 +15,17 @@
         <ul class="header-list">
           <li>作者紹介</li>
           <li>競走馬の魅力</li>
-          <li>本サイトの目的</li>
+          <li>当サイトの目的</li>
         </ul>
       </div>   
-   
-    <main>
+       
 <!-- ############################################# -->
-       <div id="container">
-     <div id="itemA">Top picture</div>
-     <div id="itemB">今週の一枚</div>
-     <div id="itemC">Diary</div>
-     <div id="itemD">今週の注目レース</div>
-      </div>
+       <main>Top picture</main>
+      <aside id="item_1">今週の一枚</aside>
+      <aside id="item_2">Diary</aside>
+      <aside id="item_3">今週の注目レース</aside>
 <!-- ############################################# -->
-    </main>
+    
     <footer class="footer">
     </footer>
 </body>
