--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div class="header-logo">Life Is but a Dream</div>
     </header>
   
-    <div class="glovalNavigation">
+    <div class="nav">
         <ul class="header-list">
           <li>作者紹介</li>
           <li>競走馬の魅力</li>
