--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
        
 <!-- ############################################# -->
        <main>Top picture</main>
-      <aside id="item_1">今週の一枚</aside>
-      <aside id="item_2">Diary</aside>
-      <aside id="item_3">今週の注目レース</aside>
+      <aside class="item_1">今週の一枚</aside>
+      <aside class="item_2">Diary</aside>
+      <aside class="item_3">今週の注目レース</aside>
 <!-- ############################################# -->
     
     <footer class="footer">
