Update and rename index_ori.html to index.html

--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
         </div>
         <div class="localNavigation">
             <p>ローカルナビゲーション</p>
+          <!-- ######## -->
+           <div class="itemA">今週の一枚</div>
+           <div class="itemB">Diary</div>
+           <div class="itemC">今週のニュース</div>
+          <!-- ######## -->
         </div>
     </main>
     <footer class="footer">
