--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
 
 <body>
     <header class="header">
-       <p>ヘッダー</p>
+       <p>Life Is but a Dream</p>
     </header>
     <div class="glovalNavigation">
        <p>グローバルナビゲーション</p>
     </div>
     <main>
         <div class="content">
-            <p>コンテンツ</p>
+            <p>Top picture</p>
         </div>
         <div class="localNavigation">
-            <p>ローカルナビゲーション</p>
+          <!-- <p>ローカルナビゲーション</p> -->
           <!-- ######## -->
            <div class="itemA">今週の一枚</div>
            <div class="itemB">Diary</div>
