--- a/index.html
+++ b/index.html
@@ -10,9 +10,15 @@
     <header class="header">
        <p>Life Is but a Dream</p>
     </header>
-    <div class="glovalNavigation">
-       <p>グローバルナビゲーション</p>
-    </div>
+
+        <div class="glovalNavigation>
+        <ul class="header-list">
+          <li>作者紹介</li>
+          <li>競走馬の魅力</li>
+          <li>当サイトの目的</li>
+        </ul>
+      </div> 
+
     <main>
         <div class="content">
             <p>Top picture</p>
