--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
        <p>Life Is but a Dream</p>
     </header>
 
-        <div class="glovalNavigation>
+        <div class="nav">
         <ul class="header-list">
           <li>作者紹介</li>
           <li>競走馬の魅力</li>
