--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@
         <div class="localNavigation">
           <!-- <p>ローカルナビゲーション</p> -->
           <!-- ######## -->
+           <div class="item">
            <div class="itemA">今週の一枚</div>
            <div class="itemB">Diary</div>
            <div class="itemC">今週のニュース</div>
+            </div>
           <!-- ######## -->
         </div>
     </main>
