--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
         </div>
     </main>
     <footer class="footer">
-       /* <p>フッター</p> */
+       <!-- <p>フッター</p> -->
     </footer>
 </body>
