--- a/index.html
+++ b/index.html
@@ -20,20 +20,14 @@
       </div> 
 
     <main>
-        <div class="content">
-            <p>Top picture</p>
-        </div>
-        <div class="localNavigation">
-          <!-- <p>ローカルナビゲーション</p> -->
+        <div class="itemA">Top picture</div>
+        <!-- ######## -->
+        <div class="itemB">今週の一枚</div>
+        <div class="itemC">Diary</div>
+        <div class="itemD">今週のニュース</div>
           <!-- ######## -->
-           <div class="item">
-           <div class="itemA">今週の一枚</div>
-           <div class="itemB">Diary</div>
-           <div class="itemC">今週のニュース</div>
-            </div>
-          <!-- ######## -->
-        </div>
     </main>
+   
     <footer class="footer">
        <!-- <p>フッター</p> -->
     </footer>
