--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <div class="itemB">今週の一枚</div>
         <div class="itemC">Diary</div>
         <div class="itemD">今週のニュース</div>
+        <div class="itemE">space_E</div>
           <!-- ######## -->
     </main>
    
