--- a/index.html
+++ b/index.html
@@ -20,12 +20,11 @@
       </div> 
 
     <main>
-        <div class="itemA">Top picture</div>
+        <div class="itemA">Top Picture</div>
         <!-- ######## -->
-        <div class="itemB">今週の一枚</div>
+        <div class="itemB">Weelkly Picture</div>
         <div class="itemC">Diary</div>
-        <div class="itemD">今週のニュース</div>
-        <div class="itemE">space_E</div>
+        <div class="itemD">Weekly News</div>
           <!-- ######## -->
     </main>
    
