--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <main>
         <div class="itemA">Top Picture</div>
         <!-- ######## -->
-        <div class="itemB">Weelkly Picture</div>
+        <div class="itemB">Weekly Picture</div>
         <div class="itemC">Diary</div>
         <div class="itemD">Weekly News</div>
           <!-- ######## -->
