--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+   <div class="wrap">
     <header class="header">
        <p>Life Is but a Dream</p>
     </header>
@@ -31,4 +32,5 @@
     <footer class="footer">
        <!-- <p>フッター</p> -->
     </footer>
+</div>      
 </body>
