--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
         <div class="nav">
         <ul class="header-list">
-          <li>作者紹介</li>
-          <li>競走馬の魅力</li>
-          <li>当サイトの目的</li>
+          <li><a href="aim.html">当サイトの目的</a></li>
+          <li><a href="how_to_fun.html">競走馬の魅力</a><</li>
+          <li><a href="introduction.html">作者紹介</a></li>
         </ul>
       </div> 
 
