--- a/how_to_fun.html
+++ b/how_to_fun.html
@@ -3,7 +3,7 @@
 <head>
    <meta charset="utf-8"/>
    <title>Life Is but a Dream</title>
-    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="stylesheet_how_to_fun.css">
 </head>
 
 <body>
