--- a/c01_aim.html
+++ b/c01_aim.html
@@ -3,7 +3,7 @@
 <head>
    <meta charset="utf-8"/>
    <title>Life Is but a Dream</title>
-    <link rel="stylesheet" href="stylesheet_aim.css">
+    <link rel="stylesheet" href="stylesheet_c01_aim.css">
 </head>
 
 <body>
