--- a/c03_introduction.html
+++ b/c03_introduction.html
@@ -3,7 +3,7 @@
 <head>
    <meta charset="utf-8"/>
    <title>Life Is but a Dream</title>
-    <link rel="stylesheet" href="stylesheet_introduction.css">
+    <link rel="stylesheet" href="stylesheet_c03_introduction.css">
 </head>
 
 <body>
