--- a/c01_aim.html
+++ b/c01_aim.html
@@ -14,7 +14,7 @@
         <div class="nav">
         <ul class="header-list">
           <li><a href="aim.html">当サイトの目的</a></li>
-          <li><a href="how_to_fun.html">競走馬の魅力</a><</li>
+          <li><a href="how_to_fun.html">競走馬の魅力</a></li>
           <li><a href="introduction.html">作者紹介</a></li>
         </ul>
       </div> 
