--- a/c02_how_to_fun.html
+++ b/c02_how_to_fun.html
@@ -8,7 +8,7 @@
 
 <body>
     <header class="header">
-       <p>Life Is but a Dream</p>
+       <p><a href="https://matin-aya.github.io/yy8tm2a2/index.html">Life Is but a Dream</a></p>
     </header>
 
         <div class="nav">
