--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <ul class="header-list">
           <li><a href="https://matin-aya.github.io/yy8tm2a2/c01_aim.html">当サイトの目的</a></li>
           <li><a href="https://matin-aya.github.io/yy8tm2a2/c02_how_to_fun.html">競走馬の魅力</a></li>
-          <li><a href="https://matin-aya.github.io/yy8tm2a2/c03_introduction.html">作者紹介</a></li>
+          <li><a href="https://matin-aya.github.io/yy8tm2a2/c03_introduction.html">お楽しみコーナー</a></li>
         </ul>
       </div> 
 
