--- a/c03_fun_page.html
+++ b/c03_fun_page.html
@@ -3,7 +3,7 @@
 <head>
    <meta charset="utf-8"/>
    <title>Life Is but a Dream</title>
-    <link rel="stylesheet" href="stylesheet_c03_introduction.css">
+    <link rel="stylesheet" href="stylesheet_c03_fun_page.css">
 </head>
 
 <body>
@@ -15,7 +15,7 @@
         <ul class="header-list">
           <li><a href="https://matin-aya.github.io/yy8tm2a2/c01_aim.html">当サイトの目的</a></li>
           <li><a href="https://matin-aya.github.io/yy8tm2a2/c02_how_to_fun.html">競走馬の魅力</a></li>
-          <li><a href="https://matin-aya.github.io/yy8tm2a2/c03_introduction.html">作者紹介</a></li>
+          <li><a href="https://matin-aya.github.io/yy8tm2a2/c03_fun_page.html">作者紹介</a></li>
         </ul>
       </div> 
 
