--- a/c03_fun_page.html
+++ b/c03_fun_page.html
@@ -20,7 +20,7 @@
       </div> 
 
     <main>
-      <div class="introduction">作者紹介</div>
+      <div class="fun_page">お楽しみページ</div>
     </main>
    
     <footer class="footer">
