--- a/c02_how_to_fun.html
+++ b/c02_how_to_fun.html
@@ -8,14 +8,14 @@
 
 <body>
     <header class="header">
-       <p class="title"><a href="https://matin-aya.github.io/yy8tm2a2/index.html">Life Is but a Dream</a></p>
+       <p class="title"><a href="https://matin-aya.github.io/yy8tm2a2/index.html" id="title_link">>Life Is but a Dream</a></p>
     </header>
 
         <div class="nav">
         <ul class="header-list">
-          <li><a href="https://matin-aya.github.io/yy8tm2a2/c01_aim.html">当サイトの目的</a></li>
-          <li><a href="https://matin-aya.github.io/yy8tm2a2/c02_how_to_fun.html">競走馬の魅力</a></li>
-          <li><a href="https://matin-aya.github.io/yy8tm2a2/c03_fun_page.html">お楽しみページ</a></li>
+          <li><a href="https://matin-aya.github.io/yy8tm2a2/c01_aim.html" class="nav_link">当サイトの目的</a></li>
+          <li><a href="https://matin-aya.github.io/yy8tm2a2/c02_how_to_fun.html" class="nav_link">競走馬の魅力</a></li>
+          <li><a href="https://matin-aya.github.io/yy8tm2a2/c03_fun_page.html" class="nav_link">お楽しみページ</a></li>
         </ul>
       </div> 
 
