--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
     </main>
    
     <footer class="footer">
-       <!-- <p>フッター</p> -->
+      <p>作者紹介</p>
+      <p>コロナ禍を機に競走馬の魅力に気づく。TVで毎週観戦中（応援専門）。</p>
+      <p>名前は、午前レースが好きなことから、matin: 朝（仏）にちなむ。</p>
+      <p>タイトルは民謡「ボートを漕ごう」の歌詞より。</p>
+      <p>カケごと以上の競馬の魅力が広まってほしい。</p>
     </footer>
 </body>
