--- a/index.html
+++ b/index.html
@@ -30,9 +30,11 @@
    
     <footer class="footer">
       <p>作者紹介</p>
-      <p>コロナ禍を機に競走馬の魅力に気づく。TVで毎週観戦中（応援専門）。</p>
-      <p>名前は、午前レースが好きなことから、matin: 朝（仏）にちなむ。</p>
-      <p>タイトルは民謡「ボートを漕ごう」の歌詞より。</p>
-      <p>カケごと以上の競馬の魅力が広まってほしい。</p>
+      <div class="Introduction">
+       <p>コロナ禍を機に競走馬の魅力に気づく。TVで毎週観戦中（応援専門）。</p>
+       <p>名前は、午前レースが好きなことからmatin：朝（仏）にちなむ。</p>
+       <p>タイトルは民謡「ボートを漕ごう」の歌詞より。</p>
+       <p>カケごと以上の競馬の魅力が広まってほしい。</p>
+      </div>
     </footer>
 </body>
