--- a/index.html
+++ b/index.html
@@ -23,7 +23,13 @@
         <div class="itemA">Top Picture</div>
         <!-- ######## -->
         <div class="itemB">Weekly Picture</div>
-        <div class="itemC">Diary</div>
+       
+        <div class="itemC">
+        <p class="diary_title">Diary</p>  
+          <a href="https://matin-aya.github.io/yy8tm2a2/Diary/220617_Fri_diary.html" class="diary_link">22/06/17 2022年度気になる新馬 第1弾</a>
+          <a href="https://matin-aya.github.io/yy8tm2a2/c05_diary_archives.html" class="diary_archives">>Archives</a>     
+        </div>
+       
         <div class="itemD">Weekly News</div>
           <!-- ######## -->
     </main>
