--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
        
         <div class="itemC">
         <p class="diary_title">Diary</p>  
-          <a href="https://matin-aya.github.io/yy8tm2a2/Diary/220617_Fri_diary.md" class="diary_link">22/06/17 2022年度気になる新馬 第1弾</a>
-          <a href="https://matin-aya.github.io/yy8tm2a2/c05_diary_archives.md" class="diary_archive_link">>Archives</a>     
+          <a href="https://matin-aya.github.io/yy8tm2a2/Diary/220617_Fri_diary.html" class="diary_link">22/06/17 2022年度気になる新馬 第1弾</a>
+          <a href="https://matin-aya.github.io/yy8tm2a2/c05_diary_archives.html" class="diary_archive_link">>Archives</a>     
         </div>
        
         <div class="itemD">Weekly News</div>
