--- a/c05_diary_archives.html
+++ b/c05_diary_archives.html
@@ -13,14 +13,19 @@
 
         <div class="nav">
         <ul class="header-list">
-          <li><a href="https://matin-aya.github.io/yy8tm2a2/c01_aim.html" class="nav_link">当サイトの目的</a></li>
-          <li><a href="https://matin-aya.github.io/yy8tm2a2/c02_how_to_fun.html" class="nav_link">競走馬の魅力</a></li>
-          <li><a href="https://matin-aya.github.io/yy8tm2a2/c03_fun_page.html" class="nav_link">作品ページ</a></li>
+          <li><a href="https://matin-aya.github.io/yy8tm2a2/c05_diary_archives.html.html" class="archive_link">>To Diary Archive</a></li>
         </ul>
       </div> 
 
     <main>
-      <div class="diary_archives">Diary Archives</div>
+       <p>競馬観戦を通じて日々考えたことなどを、日記にしていきます。</p>
+       <p>レイアウトは仮ですが、不定期更新でも続けられるようにがんばります。</p>
+
+     <div class="diary_archives">Diary Archive List</div>
+       <ul class="diary-list">
+        <li><a href="https://matin-aya.github.io/yy8tm2a2/Diary/220617_Fri_diary.html" class="diary_item">>22/06/17  2022年度気になる新馬 第1弾</a></li>
+       </ul>
+     </div>
     </main>
    
     <footer class="footer">
