--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
     </main>
    
     <footer class="footer">
-    <!--  <div class="Introduction"> -->
-       <p class="intro_title">作者紹介</p>
-       <p class="intro_sentence">コロナ禍を機に競走馬の魅力に気づく。TVで毎週観戦中（応援専門）。</p>
-       <p class="intro_sentence">名前は、午前レースが好きなことからmatin：朝（仏）にちなむ。</p>
-       <p class="intro_sentence">タイトルは民謡「ボートを漕ごう」の歌詞より。</p>
-       <p class="intro_sentence">カケごと以上の競馬の魅力が広まってほしい。</p>
-     <!-- </div> -->
+     <div class="intro_box">
+       <h3>作者紹介</h3>
+       <p>コロナ禍を機に競走馬の魅力に気づく。TVで毎週観戦中（応援専門）。</p>
+       <p>名前は、午前レースが好きなことからmatin：朝（仏）にちなむ。</p>
+       <p>タイトルは民謡「ボートを漕ごう」の歌詞より。</p>
+       <p>カケごと以上の競馬の魅力が広まってほしい。</p>
+    </div>
     </footer>
 </body>
