--- a/Diary/220617_Fri_diary.html
+++ b/Diary/220617_Fri_diary.html
@@ -37,7 +37,7 @@
        <p class="diary_sent">パドック周回時に後脚が跳ねるような歩き方をしていたのが可愛らしくて印象に残っています。</p>
        <p class="diary_sent">残念ながら、骨折発症をきっかけに今年に入って急遽引退することになってしまいましたが、</p>
        <p class="diary_sent">入れ替わりでデビューするこの妹に続きの活躍を期待したいです。</p>
-       <p class="diary_sent">母馬であるアパパネの主戦騎手を務めていた蛯名調教師が管理されるという点にも、人と馬とのいろいろなつながりが感じられて良いなと思います。</p>
+       <p class="diary_sent">母馬であるアパパネの主戦騎手を務めていた蛯名調教師が管理されるという点にも、人と馬とのつながりが感じられて良いなと思います。</p>
        <p class="diary_sent">また、「長らく会っていなかった友人に会う喜び（バスク語）」という意味の馬名から、コロナ禍という状況の中で願う馬主の方の思いが感じられました。</p>
 
      <h2>3. ガルヴァナイズ (父；リアルスティール　母：カヴェルナ　牡　鹿毛)</h2>
