--- a/c01_aim.html
+++ b/c01_aim.html
@@ -20,7 +20,11 @@
       </div> 
 
     <main>
-      <div class="aim">当サイトの目的</div>
+      <h3 class="aim">当サイトの目的</h3>
+      <ul class="aim-list">
+      <li>趣味で、コードからwebサイト作りに挑戦したい</li>
+      <li>手描きの絵をwebで見映えするような見せ方の感覚をつかみたい</li>
+      <li>カケごとだけじゃない競馬の魅力が広まってほしい、という思いからテーマを競馬にした</li>
     </main>
    
     <footer class="footer">
