--- a/c01_aim.html
+++ b/c01_aim.html
@@ -25,6 +25,15 @@
       <li>趣味で、コードからwebサイト作りに挑戦したい</li>
       <li>手描きの絵をwebで見映えするような見せ方の感覚をつかみたい</li>
       <li>カケごとだけじゃない競馬の魅力が広まってほしい、という思いからテーマを競馬にした</li>
+         
+      <h3 class="task">Webサイト作成上での当面の課題</h3>
+      <ul class="task-list">
+       <li>TopページのDiaryボックスに配置した文字が調整できない(画面縮小時にレイアウト崩れ発生)</li>
+       <li>Topページのfooterの自己紹介部分が画面右寄せ配置にならない</li>
+       <li>Diary記事ページの文章行間調整がうまくいかない(効いていない？)</li>
+       <li>@media screenを使ったレスポンシブデザインがうまく表示されない(レイアウトが崩れる)</li>
+       </li>Navに表示した文字列の左右余白が少し不均等？また、文字列を中央表示したいのに少し上に寄る</li>
+      </ul>
     </main>
    
     <footer class="footer">
