--- a/Diary/220617_Fri_diary.html
+++ b/Diary/220617_Fri_diary.html
@@ -57,9 +57,8 @@
        <p class="diary_sent">「BUMP OF CHICKEN」の方々がインディーズ時代に出したアルバムの中に同名の歌があり、</p>
        <p class="diary_sent">名前を一目見て、純粋に応援したくなりました。歌詞がすごく良いので。</p>
        <p class="diary_sent">昨年も同グループの歌と同じ名前をもつ「バトルクライ」という馬を同じ理由で応援していました。</p>
-       <p class="diary_sent">芝からダートに転向して好走が増えてきた感じがあります。</p>
-       <p class="diary_sent">本馬は、じわじわと重賞勝馬が出つつあるミッキーアイル産駒で可能性も未知数だと思うので、産駒として新しい一面が見られれば嬉しいです。</p>
-       <p class="diary_sent">こちらも2022年6月18日の東京5Rでデビューですので応援します。</p>
+       <p class="diary_sent">本馬は、じわじわと重賞勝馬が出つつあるミッキーアイル産駒で可能性も未知数だと思うので、産駒としての新しい一面が見られれば嬉しいです。</p>
+       <p class="diary_sent">こちらも2022年6月18日の東京5Rでデビューなので応援します。</p>
 
        <p class="diary_sent">以上、2022年度気になる新馬の第1弾でした。出走予定が決まっている2頭は、今年のPOG(Paper Owner Game)での応援馬として登録しました。</p>
        <p class="diary_sent">第2弾以降も、また載せたいと思います。</p>
