--- a/c01_aim.html
+++ b/c01_aim.html
@@ -29,8 +29,10 @@
       <h3 class="task">Webサイト作成上での当面の課題</h3>
       <ul class="task-list">
        <li>TopページのDiaryボックスに配置した文字が調整できない(画面縮小時にレイアウト崩れ発生)</li>
+       <li>TopページのDiaryボックスに配置した文字のリンク色の調整が効かない</li> 
        <li>Topページのfooterの自己紹介部分が画面右寄せ配置にならない</li>
        <li>Diary記事ページの文章行間調整がうまくいかない(効いていない？)</li>
+       <li>DiaryアーカイブスページのTitleリンク色は大丈夫だけど、記事ページの方のTitleリンク色の調整が効かない</li>
        <li>@media screenを使ったレスポンシブデザインがうまく表示されない(レイアウトが崩れる)</li>
        </li>Navに表示した文字列の左右余白が少し不均等？また、文字列を中央表示したいのに少し上に寄る</li>
       </ul>
