--- a/c01_aim.html
+++ b/c01_aim.html
@@ -23,7 +23,7 @@
       <h3 class="aim">当サイトの目的</h3>
       <ul class="aim-list">
       <li>趣味で、コードからwebサイト作りに挑戦したい</li>
-      <li>手描きの絵をwebで見映えするような見せ方の感覚をつかみたい</li>
+      <li>手描きの絵をwebに載せたときに見映えするような見せ方の感覚をつかみたい</li>
       <li>カケごとだけじゃない競馬の魅力が広まってほしい、という思いからテーマを競馬にした</li>
          
       <h3 class="task">Webサイト作成上での当面の課題</h3>
