--- a/c02_how_to_fun.html
+++ b/c02_how_to_fun.html
@@ -20,7 +20,22 @@
       </div> 
 
     <main>
-      <div class="how_to_fun">競走馬の魅力</div>
+      <h3 class="how_to_fun">カケゴトだけじゃもったいない！競走馬の5つの魅力</h3>
+      <ul class="fun-list">
+       <li>馬のかけ合わせから生まれる仔馬の毛色を見て、生物学（遺伝）の学習ができる<li>
+       <li>馬券選びの組み合わせを考えて、数学（確率と場合の数）の学習ができる</li>
+       <li>馬名の由来を調べて色々な国の言葉の意味がわかるので、語学の学習ができる</li>
+       <li>レース名についた地名を知ることで、日本に詳しくなれる</li>
+       <li>馬の仕草や体の構造を知ることで、馬に詳しくなれる</li>
+
+      <h3 class="aruaru">競走馬好きな人あるある？</h3>
+      <ul class="aruaru-list">
+       <li>良さげな言葉があると、馬名用に9文字に収まるかカウントしたくなる</li>
+       <li>グラフとかの色分けが枠色にしか見えない</li> 
+       <li>週末天気は馬場状態の予想に大事</li>
+       <li>自分の仕事などの予定が順調なら「先行逃切」, 予定ギリギリなら「追込一気」と言いたくなる</li>
+       <li>馬の親族関係を覚えるのが楽しい</li>
+      </ul>
     </main>
    
     <footer class="footer">
