--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="itemB">Weekly Picture</div>
        
         <div class="itemC">
-        <p class="diary_title">Diary</p>  
+        <h2 class="diary_title">Diary</h2>  
           <a href="https://matin-aya.github.io/yy8tm2a2/Diary/220617_Fri_diary.html" class="diary_link">22/06/17 2022年度気になる新馬 第1弾</a>
           <a href="https://matin-aya.github.io/yy8tm2a2/c05_diary_archives.html" class="diary_archive_link">>Archives</a>     
         </div>
