--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <h2 class="diary_title">Diary</h2>
           <ul class="diary-list">
            <li><a href="https://matin-aya.github.io/yy8tm2a2/Diary/220617_Fri_diary.html" class="diary_link">22/06/17 2022年度気になる新馬 第1弾</a></li>
-           <li><a href="https://matin-aya.github.io/yy8tm2a2/c05_diary_archives.html" class="diary_archive_link">>Archives</a></li>     
+           <li><a href="https://matin-aya.github.io/yy8tm2a2/c05_diary_archives.html" class="diary_link">>Archives</a></li>     
           <li>
         </div>
        
