--- a/c05_diary_archives.html
+++ b/c05_diary_archives.html
@@ -23,7 +23,7 @@
 
      <h3 class="diary_archives">Diary Archive List</h3>
        <ul class="diary-list">
-        <li><a href="https://matin-aya.github.io/yy8tm2a2/Diary/220617_Fri_diary.html" class="diary_item">>22/06/17  2022年度気になる新馬 第1弾</a></li>
+        <li><a href="https://matin-aya.github.io/yy8tm2a2/Diary/220617_Fri_diary.html" class="diary_item">22/06/17  2022年度気になる新馬 第1弾</a></li>
        </ul>
      </div>
     </main>
