--- a/index.html
+++ b/index.html
@@ -25,10 +25,9 @@
         <div class="itemB">Weekly Picture</div>
        
         <div class="itemC">
-        <h2 class="diary_title">Diary</h2>
-          <ul class="diary-list">
-           <li><a href="https://matin-aya.github.io/yy8tm2a2/Diary/220617_Fri_diary.html" class="diary_link_1">22/06/17 2022年度気になる新馬 第1弾</a></li>
-           <li><a href="https://matin-aya.github.io/yy8tm2a2/c05_diary_archives.html" class="diary_link_2">>To Diary Archives</a></li>     
+        <p>Diary</p>
+        <p><a href="https://matin-aya.github.io/yy8tm2a2/Diary/220617_Fri_diary.html" class="diary_link_1">22/06/17 2022年度気になる新馬 第1弾</a></p>
+        <p><a href="https://matin-aya.github.io/yy8tm2a2/c05_diary_archives.html" class="diary_link_2">>To Diary Archives</a></p>     
         </div>
        
         <div class="itemD">Weekly News</div>
