--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <main>
         <div class="itemA">Top Picture</div>
         <!-- ######## -->
-        <div class="itemB">Weekly Picture</div>
+        <div class="itemB">Gallery</div>
        
         <div class="itemC">
         <h1>Diary</h1>
@@ -30,7 +30,7 @@
         <h3><a href="https://matin-aya.github.io/yy8tm2a2/c05_diary_archives.html" class="diary_link_2">>To Diary Archives</a></h3>     
         </div>
        
-        <div class="itemD">Weekly News</div>
+        <div class="itemD">News</div>
           <!-- ######## -->
     </main>
    
