--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
        
         <div class="itemC">
         <h1>Diary</h1>
-        <h2><a href="https://matin-aya.github.io/yy8tm2a2/Diary/220617_Fri_diary.html" class="diary_link_1">22/06/17 2022年度気になる新馬 第1弾</a></h2>
-        <h3><a href="https://matin-aya.github.io/yy8tm2a2/c05_diary_archives.html" class="diary_link_2">>To Diary Archives</a></h3>     
+        <h2><a href="https://matin-aya.github.io/yy8tm2a2/Diary/220617_Fri_diary.html">22/06/17 2022年度気になる新馬 第1弾</a></h2>
+        <h3><a href="https://matin-aya.github.io/yy8tm2a2/c05_diary_archives.html">>To Diary Archives</a></h3>     
         </div>
        
         <div class="itemD">News</div>
