--- a/c05_diary_archives.html
+++ b/c05_diary_archives.html
@@ -13,7 +13,7 @@
 
         <div class="nav">
         <ul class="header-list">
-          <li><a href="https://matin-aya.github.io/yy8tm2a2/c05_diary_archives.html" class="nav_link">>To Diary Archives</a></li>
+          <li><a href="https://matin-aya.github.io/yy8tm2a2/c05_diary_archives.html">>To Diary Archives</a></li>
         </ul>
       </div> 
 
