--- a/c05_diary_archives.html
+++ b/c05_diary_archives.html
@@ -18,9 +18,12 @@
       </div> 
 
     <main>
+      <p>競馬観戦を通じて日々考えたことなどを、日記にしていきます。</p>
+      <p>レイアウトは仮ですが、不定期更新でも続けられるようにがんばります。</p>  
       <h3 class="diary_title">22/06/17  2022年度気になる新馬 第1弾</h3>
-       
-    
+       <ul class="diary-list">
+        <li><a href="https://matin-aya.github.io/yy8tm2a2/Diary/220617_Fri_diary.html">22/06/17  2022年度気になる新馬 第1弾</a></li>
+       </ul>
     </main>
    
     <footer class="footer">
