--- a/c05_diary_archives.html
+++ b/c05_diary_archives.html
@@ -25,7 +25,7 @@
        
        <div class="diary-item">
        <ul class="diary-list">
-        <li><a href="https://matin-aya.github.io/yy8tm2a2/Diary/220617_Fri_diary.html" class="diary_link">22/06/17  2022年度気になる新馬 第1弾</a></li>
+        <li><a href="https://matin-aya.github.io/yy8tm2a2/Diary/220617_Fri_diary.html">22/06/17  2022年度気になる新馬 第1弾</a></li>
        </ul>
        </div>
        
