--- a/index.html
+++ b/index.html
@@ -25,12 +25,16 @@
         <div class="itemB">Gallery</div>
        
         <div class="itemC">
-        <h1>Diary</h1>
-        <h2><a href="https://matin-aya.github.io/yy8tm2a2/Diary/220617_Fri_diary.html">22/06/17 2022年度気になる新馬 第1弾</a></h2>
-        <h3><a href="https://matin-aya.github.io/yy8tm2a2/c05_diary_archives.html">>To Diary Archives</a></h3>     
+         <h1>Diary</h1>
+         <h2><a href="https://matin-aya.github.io/yy8tm2a2/Diary/220617_Fri_diary.html">22/06/17 2022年度気になる新馬 第1弾</a></h2>
+         <h3><a href="https://matin-aya.github.io/yy8tm2a2/c05_diary_archives.html">>To Diary Archives</a></h3>     
         </div>
        
-        <div class="itemD">News</div>
+        <div class="itemD">
+         <h1>News</h1>
+         <h2><a href="https://matin-aya.github.io/yy8tm2a2/News/220619_Fri_news.html">22/06/19  東京11RユニコーンS(G3)バトルクライ3着入線</a></h2>
+         <h3><a href="https://matin-aya.github.io/yy8tm2a2/c06_news_archives.html">>To News Archives</a></h3>     
+        </div>     
           <!-- ######## -->
     </main>
    
