--- a/c03_fun_page.html
+++ b/c03_fun_page.html
@@ -20,8 +20,12 @@
       </div> 
 
     <main>
-     <h3 class="works">作品コンテンツ紹介</h3>
-      <div class="fun_page">作品ページ</div>
+      <p>競走馬に関連した作品コンテンツを掲載します。</p>
+      <p>grid使いこなして色々なレイアウトパターンのページが作れるように頑張ります。</p>
+      <p>現在5つほどアイデアがあるので、出来次第載せてみる予定です。</p>
+       
+      <h3 class="works">作品コンテンツ紹介 (ただいま工事中(-_-)＞")</h3>
+       
     </main>
    
     <footer class="footer">
