--- a/Diary/220617_Fri_diary.html
+++ b/Diary/220617_Fri_diary.html
@@ -21,16 +21,16 @@
       <h1 class="diary_title">22/06/17  2022年度気になる新馬 第1弾</h1>
        
        <p class="diary_sent">趣味で作ってみたWebサイトで公開する、記念すべき最初の日記です。</p>
-       <p class="diary_sent">競馬をTVで見始めてちょうど1年近くが経ったところで、2020年生まれ2歳馬たちのデビュー戦が今年も始まりました。</p>
-       <p class="diary_sent">今日は、今年の2歳馬たちの中で、私がぜひ応援したいと思っている馬を第1弾として紹介します。</p>
-       <p class="diary_sent">競走馬としての力や細かい血統の特徴などは深く考えず、主に直感や名前の響きの印象をもとに挙げています。</p>
+       <p class="diary_sent">競馬をTVで見始めてちょうど1年近くが経ったところで、2020年生まれ2歳馬たちのデビュー戦が今年も始まりました。</br>
+                             今日は、今年の2歳馬たちの中で、私がぜひ応援したいと思っている馬を第1弾として紹介します。</br>
+                             競走馬としての力や細かい血統の特徴などは深く考えず、主に直感や名前の響きの印象をもとに挙げています。</p>
  
       <h2>1. アオラキ (父；ゴールドシップ　母：カスタディーヴァ　牡　白毛)</h2>
-       <p class="diary_sent">競馬観戦を始めたきっかけが、今活躍中である白毛牝馬ソダシの2021年桜花賞勝利ニュースを偶然見たことだったので、</p>
-       <p class="diary_sent">白毛馬には縁を感じています。</p>
-       <p class="diary_sent">本馬はソダシとは異なる牝系の白毛一族で、現役時の破天荒ぶりが際立つゴールドシップを父にもつ血統なので、</p>
-       <p class="diary_sent">どのように成長するのか楽しみな一頭です。</p>
-       <p class="diary_sent">マオリ語に由来する不思議な響きの馬名にも魅力を感じます。</p>
+       <p class="diary_sent">競馬観戦を始めたきっかけが、今活躍中である白毛牝馬ソダシの2021年桜花賞勝利ニュースを偶然見たことだったので、</br>
+                             白毛馬には縁を感じています。</br>
+                             本馬はソダシとは異なる牝系の白毛一族で、現役時の破天荒ぶりが際立つゴールドシップを父にもつ血統なので、</br>
+                             どのように成長するのか楽しみな一頭です。</br>
+                             マオリ語に由来する不思議な響きの馬名にも魅力を感じます。</p>
 
       <h2>2. アスパルディーコ (父；ブラックタイド　母：アパパネ　牝　黒鹿毛)</h2> 
        <p class="diary_sent">本馬の半姉であるアカイトリノムスメは、ソダシと同期で2021年の三冠牝馬を競うGIレースでも活躍していたため、注目していました。</p>
