--- a/c01_aim.html
+++ b/c01_aim.html
@@ -26,12 +26,12 @@
       <li>手描きの絵をwebに載せたときに見映えするような見せ方の感覚をつかみたい</li>
       <li>カケごとだけじゃない競馬の魅力が広まってほしい、という思いからテーマを競馬にした</li>
          
-      <h3 class="task">Webサイト作成上での当面の課題</h3>
+      <h3 class="task">Webサイト作成上での当面の課題・予定</h3>
       <ul class="task-list">
-       <li>TopページのDiaryボックスに配置した文字が調整できない(画面縮小時にレイアウト崩れ発生)</li>
-       <li>Diary記事ページの文章行間調整がうまくいかない(効いていない？)</li>
+       <li>画像を入れてみる（作者紹介のアイコン・Top picuture・Gallary）</li>
+       <li>他ページの大枠レイアウトを整える（Gallary Archives・作品ページ・当サイトの目的・競走馬の魅力）</li>
        <li>@media screenを使ったレスポンシブデザインがうまく表示されない(レイアウトが崩れる)</li>
-       </li>Navに表示した文字列の左右余白が少し不均等？また、文字列を中央表示したいのに少し上に寄る</li>
+       <li>Navに表示した文字列の左右余白が少し不均等？また、文字列を中央表示したいのに少し上に寄る</li>
       </ul>
     </main>
    
