--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
     <footer class="footer">
      <div class="intro_box">
        <h3>作者紹介</h3>
-       <p>コロナ禍を機に競走馬の魅力に気づく。TVで毎週観戦中（応援専門）。</p>
-       <p>名前は、午前レースが好きなことからmatin：朝（仏）にちなむ。</p>
-       <p>タイトルは民謡「ボートを漕ごう」の歌詞より。</p>
-       <p>カケごと以上の競馬の魅力が広まってほしい。</p>
+       <p class="intro_sent">コロナ禍を機に競走馬の魅力に気づく。TVで毎週観戦中（応援専門）。</p>
+                             名前は、午前レースが好きなことからmatin：朝（仏）にちなむ。</br>
+                             タイトルは民謡「ボートを漕ごう」の歌詞より。</br>
+                             カケごと以上の競馬の魅力が広まってほしい。</p>
     </div>
     </footer>
 </body>
