--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
     </main>
    
     <footer class="footer">
+     <img class="intro_pic" src="https://matin-aya.github.io/yy8tm2a2/intro_pic.png" alt="user_icon">
+       
      <div class="intro_box">
        <h3>作者紹介</h3>
         <p>コロナ禍を機に競走馬の魅力に気づく。TVで毎週観戦中（応援専門）。
