--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </main>
    
     <footer class="footer">
-     <img class="intro_pic" src="https://matin-aya.github.io/yy8tm2a2/intro_pic.png" alt="user_icon">
+     <img class="intro_pic" src="https://matin-aya.github.io/yy8tm2a2/Images/intro_pic.png" alt="user_icon">
        
      <div class="intro_box">
        <h3>作者紹介</h3>
