--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <footer class="footer">
         
      <div class="intro_box">
-        <img src="https://matin-aya.github.io/yy8tm2a2/Images/intro_pic.png" alt="user_icon">
+        <img class="intro_pic" src="https://matin-aya.github.io/yy8tm2a2/Images/intro_pic.png" alt="user_icon">
         
        <h3>作者紹介</h3>
         <p>コロナ禍を機に競走馬の魅力に気づく。TVで毎週観戦中（応援専門）。
