--- a/index.html
+++ b/index.html
@@ -40,9 +40,11 @@
    
     <footer class="footer">
         
-     <div class="intro_box">        
-       <h3>作者紹介</h3>
-        <p>コロナ禍を機に競走馬の魅力に気づく。TVで毎週観戦中（応援専門）。
+     <div class="intro_box">
+        <img src="https://matin-aya.github.io/yy8tm2a2/Images/intro_pic.png" alt="user_icon">
+        
+        <h3 class="intro_title">作者紹介</h3>
+        <p class="intro_sent">コロナ禍を機に競走馬の魅力に気づく。TVで毎週観戦中（応援専門）。
            名前は、午前レースが好きなことからmatin：朝（仏）にちなむ。
            タイトルは民謡「ボートを漕ごう」の歌詞より。カケごと以上の競馬の魅力が広まってほしい。</p>
     </div>
