--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         
      <div class="intro_box">
         <img class="intro_pic" src="https://matin-aya.github.io/yy8tm2a2/Images/intro_pic.png" alt="user_icon">
+        <!-- <img class="intro_pic" src="https://matin-aya.github.io/yy8tm2a2/Images/intro_pic.png" alt="user_icon"> -->
         
         <h3 class="intro_title">作者紹介</h3>
         <p class="intro_sent">コロナ禍を機に競走馬の魅力に気づく。TVで毎週観戦中（応援専門）。
