--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
        
         <div class="itemD">
          <h1>News</h1>
-         <h2><a href="https://matin-aya.github.io/yy8tm2a2/News/220619_Sun_news.html">22/06/19  東京11RユニコーンS(G3)バトルクライ3着入線</a></h2>
+         <h2><a href="https://matin-aya.github.io/yy8tm2a2/News/220626_Sun_news.html">22/06/26  阪神11R宝塚記念(G1)ディープボンド4着惜敗</a></h2>
          <h3><a href="https://matin-aya.github.io/yy8tm2a2/c06_news_archives.html">>To News Archives</a></h3>     
         </div>     
           <!-- ######## -->
