--- a/c06_news_archives.html
+++ b/c06_news_archives.html
@@ -26,6 +26,7 @@
        <div class="news-item">
        <ul class="news-list">
         <li><a href="https://matin-aya.github.io/yy8tm2a2/News/220619_Sun_news.html">22/06/19  東京11RユニコーンS(G3)バトルクライ3着入線</a></li>
+        <li><a href="https://matin-aya.github.io/yy8tm2a2/News/220626_Sun_news.html">22/06/26  阪神11R宝塚記念(G1)ディープボンド4着惜敗</a></li>
        </ul>
        </div>
        
