--- a/Diary/220709_Sat_diary.html
+++ b/Diary/220709_Sat_diary.html
@@ -20,7 +20,7 @@
     <main>
       <h1 class="diary_title">22/07/09  2022年度気になる新馬 第2弾</h1>
        
-       <p class="diary_sent">先日7/3(日)に、「2022年度気になる新馬 第1弾」として挙げた白毛のアオラキ(牡2)が出走するデビュー戦が函館5Rで行われました。</br>
+       <p class="diary_sent">先日7月3日(日)に、「2022年度気になる新馬 第1弾」として挙げた白毛のアオラキ(牡2)が出走するデビュー戦が函館5Rで行われました。</br>
                              ゲートを出遅れながらも最後の直線では追い込みを見せての4着という、少々苦い結果となったようですが、</br>
                              「現役時に気性の癖が強かった父ゴールドシップの雰囲気と似ていた」というファンの方々の感想も見られ、微笑ましくも感じました。</p>
                              伸び代たっぷりな予感がする本馬の次走も見守りたいです。父と同じ長距離路線で活躍する将来にも期待が膨らみます。</p>
@@ -29,35 +29,16 @@
                              近年、芝・ダートで活躍を見せる産駒たちが登場し、多様な特徴や適性に対する注目度が急速に高まっている印象があります。</br>
                              そんな種牡馬オルフェーブルの産駒として、明日デビューを迎える2歳馬「シリンガバルガリス」を今日は紹介します。</br>
 
-       <p class="diary_sent">本馬の半姉であるアカイトリノムスメは、ソダシと同期で2021年の三冠牝馬を競うGIレースでも活躍していたため、注目していました。</br>
-                             パドック周回時に後脚が跳ねるような歩き方をしていたのが可愛らしくて印象に残っています。</br>
-                             残念ながら、骨折発症をきっかけに今年に入って急遽引退することになってしまいましたが、</br>
-                             入れ替わりでデビューするこの妹に続きの活躍を期待したいです。</br>
-                             母馬であるアパパネの主戦騎手を務めていた蛯名調教師が管理されるという点にも、人と馬とのつながりが感じられて良いなと思います。</br>
-                             また、「長らく会っていなかった友人に会う喜び（バスク語）」という意味の馬名から、コロナ禍という状況の中で願う馬主の方の思いが感じられました。</p>
-
-     <h2>3. ガルヴァナイズ (父；リアルスティール　母：カヴェルナ　牡　鹿毛)</h2>
-       <p class="diary_sent">新種牡馬リアルスティールの産駒で、今年大活躍中の友道調教師が管理されるとのことで、応援しています。</br>
-                             ガルヴァナイズ（galvanize）という名前が英語だったことを、実は今日初めて知りました。新しい言葉を自然に学べることこそ、</br>
-                             競馬観戦の大きな魅力だと改めて思います。</br>
-                            「電気を通す、奮い立たせる」といった意味らしいのですが、なんとなく「ディープインパクト」と似た雰囲気のようなものを名前に感じました。</br>
-                             2022年6月18日の阪神5Rでデビューするので、TVで新馬戦を観るつもりです。</p>
+       <p class="diary_sent">私が本馬に惹かれた理由は、注目のオルフェーブル産駒であるということの他に、その馬名の由来にもあります。</br>
+                             本馬の母「ライラックスアンドレース」と姉「ラッキーライラック」には「ライラック」という落葉花木の名前が共通して入っています。</br>
+                             弟には「ライラック」という言葉は入らないのだなと思ったのですが、</br>
+                             実は「シリンガバルガリス」というのは、ライラックの学名"Syringa Vulgaris"に由来しているとのことでした。</br>
+                             そのままの名前ではなくあえてラテン語の学名で名付けるという点がおしゃれだなと感じるとともに、</br>
+                             私自身の専攻科目で動植物の学名を使う機会があり親しみやすさを感じたため、応援しようという思いに至りました。</br>
+                             学名表記を新たに知ることもできて良かったです。ライラックを研究する方と将来知り合えたときに話題が広げられたら嬉しいです。</br>
  
-     <h2>4. テンペスト (父：ロードカナロア　母：シーザリオ　牝　黒鹿毛)</h2>
-       <p class="diary_sent">だいぶ前にあった琉球王国が舞台のドラマと同名だなぁという印象に惹かれて、最初は注目しました。</br>
-                             本馬の正式な馬名の由来はシェイクスピアの戯曲名とのことなのですが、テンペスト（Tempest）は英語で「嵐」のことらしく、</br>
-                             そちらの方の意味を知って良いなと思いました。</br>
-                             「風」にまつわる名前をもつ馬はなんだか好きです。活躍する牝馬を多く輩出する国枝調教師が管理されるそうなので、これからの成長が楽しみです。</p>
-
-     <h2>5. グングニル (父：ミッキーアイル　母：ポリリズム　牡　栗毛)</h2>
-       <p class="diary_sent">「BUMP OF CHICKEN」の方々がインディーズ時代に出したアルバムの中に同名の歌があり、</br>
-                              名前を一目見て、純粋に応援したくなりました。歌詞がすごく良いので。</br>
-                              昨年も同グループの歌と同じ名前をもつ「バトルクライ」という馬を同じ理由で応援していました。</br>
-                              本馬は、じわじわと重賞勝馬が出つつあるミッキーアイル産駒で可能性も未知数だと思うので、産駒としての新しい一面が見られれば嬉しいです。</br>
-                              こちらも2022年6月18日の東京5Rでデビューなので応援します。</p>
-
-       <p class="diary_sent">以上、2022年度気になる新馬の第1弾でした。出走予定が決まっている2頭は、今年のPOG(Paper Owner Game)での応援馬として登録しました。</br>
-                             第2弾以降も、また載せたいと思います。</p>
+       <p class="diary_sent">ちょうど明日7月10日(日)の小倉5Rがデビュー戦となります。</br>
+                             早口で呼ぶのが何気に難しそうな本馬、実況アナウンサーの方に馬名を連呼されまくるような熱いレースになることを期待しています。</br>
       
     </main>
    
