--- a/Diary/220709_Sat_diary.html
+++ b/Diary/220709_Sat_diary.html
@@ -35,7 +35,7 @@
                              実は「シリンガバルガリス」というのは、ライラックの学名"Syringa Vulgaris"に由来しているとのことでした。</br>
                              そのままの名前ではなくあえてラテン語の学名で名付けるという点がおしゃれだなと感じるとともに、</br>
                              私自身の専攻科目で動植物の学名を使う機会があり親しみやすさを感じたため、応援しようという思いに至りました。</br>
-                             学名表記を新たに知ることもできて良かったです。ライラックを研究する方と将来知り合えたときに話題が広げられたら嬉しいです。</br>
+                             学名表記を新たに知ることもできて良かったです。ライラック研究者(？)の方と将来知り合えたときに話題が広げられたら嬉しいです。</br>
  
        <p class="diary_sent">ちょうど明日7月10日(日)の小倉5Rがデビュー戦となります。</br>
                              早口で呼ぶのが何気に難しそうな本馬、実況アナウンサーの方に馬名を連呼されまくるような熱いレースになることを期待しています。</br>
